--- a/css/game.css
+++ b/css/game.css
@@ -16,7 +16,7 @@ div.game-wrapper
 {
     display: none;
     height: 350px;
-    margin: 15px 0 35px;
+    padding: 15px 0 35px;
 }
 
 div.canvas-container
