--- a/css/start.css
+++ b/css/start.css
@@ -3,8 +3,6 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    
-    color: white;
 }
 
 .start-menu-container .start-menu
@@ -12,7 +10,8 @@
     position: absolute;
     top: 105px;
     padding-left: 20px;
-    width: 250px;
+    width: 250px;       
+    color: white;
 }
 
 .start-menu .message
@@ -23,7 +22,7 @@
 
 .start-menu-container .menu-item
 {
-    padding: 5px 0 5px 10px;
+    padding: 5px 5px 5px 10px;
     border: 1px solid transparent;
     margin: 2px 0;
 }
@@ -43,4 +42,14 @@
 {
     background-color: rgba(255, 255, 255, .4);
     border: 1px solid rgba(255, 255, 255, .4);
+}
+
+.save-backup
+{
+    display: none;
+}
+
+.save-backup textarea
+{
+    width: 100%;
 }
