--- a/css/start.css
+++ b/css/start.css
@@ -44,12 +44,13 @@
     border: 1px solid rgba(255, 255, 255, .4);
 }
 
-.save-backup
+/***** DIALOGS *****/
+.save-backup, .upload-backup
 {
     display: none;
 }
 
-.save-backup textarea
+.save-backup textarea, .upload-backup textarea
 {
     width: 100%;
 }
