--- a/css/menu.css
+++ b/css/menu.css
@@ -48,6 +48,12 @@ div.menu .selected .image, .end-turn .image
     visibility: hidden;
 }
 
+.item-action-menu-confirm
+{
+    display: none;
+    font-size: 10pt;
+}
+
 /***** END TURN MENU *****/
 .end-turn
 {
