--- a/css/menu.css
+++ b/css/menu.css
@@ -30,19 +30,21 @@ div.menu .selected .image, .end-turn .image
     overflow: hidden
 }
 
-.weapon-menu .item-element
+.menu .item-element
 {
-    padding: 2.5px;
-    padding-right: 6px;
+    padding: 1.5px;
+    padding-right: 5px;
     float: left;
+    width: 170px;
+    border: 1px solid transparent;
 }
 
 .weapon-menu, .item-menu
 {
-    width: 165px;
+    width: 200px;
 }
 
-.menu.weapon-menu .image
+.menu.weapon-menu .image, .menu.item-menu .image
 {
     margin-top: 7px;
 }
@@ -57,11 +59,6 @@ div.menu .selected .image, .end-turn .image
 {
     display: none;
     font-size: 10pt;
-}
-
-.menu.item-menu .image
-{
-    margin-top: 5px;
 }
 
 .item-menu .item-element
