Add morgan's picture

--- a/css/game.css
+++ b/css/game.css
@@ -102,7 +102,7 @@ div.right-sidebar > div
 .red-box 
 {
     border: 1px solid #822;
-    background-color: #F88;
+    background-color: #E66;
 }
 
 .neutral-box 
