--- a/css/vn.css
+++ b/css/vn.css
@@ -67,13 +67,13 @@
 .vn-wrapper .chapter-display .main
 {
     font-size: 14pt;
-    font-weight: bold;
     color: #999;
 }
 
 .vn-wrapper .chapter-display .name
 {
-    font-size: 12pt;
+    font-size: 14pt;
+    padding-left: 5px;
 }
 
 /***** SCENE *****/
