Rearrange game_info

--- a/game_css/game_info.css
+++ b/game_css/game_info.css
@@ -4,7 +4,25 @@
     margin: 25px 0;
 }
 
-.game-info h3.first
+.game-info .two-column
+{
+    overflow: hidden;
+}
+
+.game-info .controls
+{
+    float: left;
+    width: 350px;
+    padding-right: 20px;
+}
+
+.game-info .how-to-play
+{
+    float: left;
+    width: 528px;
+}
+
+.game-info .two-column h3
 {
     margin-top: 3px;
 }
@@ -27,6 +45,7 @@
     margin-top: 10px;
     border-radius: 4px;
     color: white;
+    font-weight: bold;
     text-decoration: none;
     background-color: #0A0;
         
